--- a/ModelGraph/ModelGraph/Controls/SymbolEdit/SymbolEditControl.xaml
+++ b/ModelGraph/ModelGraph/Controls/SymbolEdit/SymbolEditControl.xaml
@@ -1,11 +1,13 @@
 ﻿<Page
     x:Class="ModelGraph.Controls.SymbolEditControl"
-    x:Name="ctrl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:canvas="using:Microsoft.Graphics.Canvas.UI.Xaml"
     Width="540" Height="340"
-    Unloaded="UserControl_Unloaded">
+    mc:Ignorable="d"
+    Background="{ThemeResource SystemControlPageBackgroundChromeLowBrush}">
 
     <Page.Resources>
 
@@ -36,7 +38,6 @@
 
 
         <SolidColorBrush x:Key="ActiveColor" Color="#FFE4BF99" />
-        <SolidColorBrush x:Key="InactiveColor" Color="{ThemeResource ApplicationPageBackgroundThemeBrush}" />
 
         <Style x:Key="ButtonStyle" TargetType="Button">
             <Setter Property="Height" Value="24" />
@@ -44,7 +45,6 @@
             <Setter Property="Padding" Value="0,0,0,0"/>
             <Setter Property="IsTabStop" Value="False" />
             <Setter Property="FontSize" Value="12" />
-            <Setter Property="Background" Value="{StaticResource InactiveColor}" />
             <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="HorizontalAlignment" Value="Center" />
         </Style>
@@ -56,205 +56,71 @@
             <Setter Property="FontSize" Value="11" />
         </Style>
 
-        <Style x:Key="SliderStyle" TargetType="Slider">
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Setter Property="Width" Value="96" />
-            <Setter Property="Height" Value="40" />
-            <Setter Property="LargeChange" Value="1" />
-        </Style>
-
-        <Style x:Key="SymViewerStyle" TargetType="ScrollViewer">
-            <Setter Property="VerticalScrollMode" Value="Enabled" />
-            <Setter Property="VerticalScrollBarVisibility" Value="Auto" />
-            <Setter Property="Grid.RowSpan" Value="2" />
-        </Style>
-
-        <Style x:Key="SymGridStyle" TargetType="Grid">
-            <Setter Property="Background" Value="DarkSlateGray" />
+        <Style x:Key="RootGridStyle" TargetType="Grid">
+            <Setter Property="VerticalAlignment" Value="Stretch" />
+            <Setter Property="HorizontalAlignment" Value="Stretch" />
             <Setter Property="Padding" Value="0" />
             <Setter Property="Margin" Value="0" />
+        </Style>
+
+        <Style x:Key="ButtonGridStyle" TargetType="Grid">
+            <Setter Property="Background" Value="{ThemeResource SystemControlPageBackgroundChromeLowBrush}"/>
             <Setter Property="VerticalAlignment" Value="Top" />
-            <Setter Property="HorizontalAlignment" Value="Right" />
+            <Setter Property="HorizontalAlignment" Value="Stretch" />
+            <Setter Property="Height" Value="32" />
+            <Setter Property="Padding" Value="0" />
+            <Setter Property="Margin" Value="0" />
         </Style>
 
         <Style x:Key="DrawGridStyle" TargetType="Grid">
             <Setter Property="Background" Value="DarkSlateGray" />
-            <Setter Property="Grid.Row" Value="1" />
-            <Setter Property="Grid.Column" Value="2" />
-            <Setter Property="Padding" Value="0" />
-            <Setter Property="Margin" Value="0" />
             <Setter Property="VerticalAlignment" Value="Top" />
-            <Setter Property="HorizontalAlignment" Value="Center" />
-        </Style>
-
-        <Style x:Key="SelectCanvasStyle" TargetType="canvas:CanvasControl">
-            <Setter Property="Width" Value="48" />
-            <Setter Property="MinHeight" Value="334" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
             <Setter Property="Padding" Value="0" />
             <Setter Property="Margin" Value="0" />
         </Style>
 
         <Style x:Key="DrawCanvasStyle" TargetType="canvas:CanvasControl">
-            <Setter Property="Width" Value="302" />
-            <Setter Property="Height" Value="302" />
+            <Setter Property="Width" Value="512" />
+            <Setter Property="Height" Value="512" />
             <Setter Property="Padding" Value="0" />
             <Setter Property="Margin" Value="0" />
         </Style>
 
     </Page.Resources>
 
-    <Grid Background="{ThemeResource SystemControlPageBackgroundChromeLowBrush}" >
-
+    <Grid x:Name="RootGrid" Style="{StaticResource RootGridStyle}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="30" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" x:Name="ButtonGrid" >
+        <Grid Style="{StaticResource ButtonGridStyle}" x:Name="ButtonGrid" >
             <TextBlock x:Name="ModelTitle" Style="{StaticResource TitleStyle}"/>
             <StackPanel x:Name="ControlPanel" Style="{StaticResource PagePanelStyle}">
-                <Button x:Name="Button1" Style="{StaticResource AppButtonStyle}" Click="AppButton_Click"/>
-                <Button x:Name="Button2" Style="{StaticResource AppButtonStyle}" Click="AppButton_Click"/>
-                <Button x:Name="Button3" Style="{StaticResource AppButtonStyle}" Click="AppButton_Click"/>
+                <Button x:Name="Button1" Style="{StaticResource AppButtonStyle}" />
+                <Button x:Name="Button2" Style="{StaticResource AppButtonStyle}" />
+                <Button x:Name="Button3" Style="{StaticResource AppButtonStyle}" />
             </StackPanel>
         </Grid>
 
         <Grid Grid.Row="1" x:Name="ControlGrid">
-            <Grid x:Name="RootGrid" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="32"/>
-                    <RowDefinition Height="302"/>
-                </Grid.RowDefinitions>
 
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
 
-                <StackPanel Grid.Row="0" Grid.Column="1" Grid.RowSpan="2">
-                    <Button x:Name="PenButton" Style="{StaticResource ButtonStyle}" Click="PenButton_Click">
-                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE70F;"/>
-                    </Button>
-                    <Button x:Name="CutButton" Style="{StaticResource ButtonStyle}" Click="CutButton_Click">
-                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE16B;"/>
-                    </Button>
-                    <Button x:Name="CopyButton" Style="{StaticResource ButtonStyle}" Click="CopyButton_Click">
-                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE16F;"/>
-                    </Button>
-                    <Button x:Name="PasteButton" Style="{StaticResource ButtonStyle}" Click="PasteButton_Click">
-                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE16D;"/>
-                    </Button>
-                    <Button x:Name="HFlipButton" Style="{StaticResource ButtonStyle}" Click="HFlipButton_Click">
-                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE13C;"/>
-                    </Button>
-                    <Button x:Name="VFlipButton" Style="{StaticResource ButtonStyle}" Click="VFlipButton_Click">
-                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE13C;" RenderTransformOrigin="0.5,0.5">
-                            <FontIcon.RenderTransform>
-                                <CompositeTransform Rotation="90"/>
-                            </FontIcon.RenderTransform>
-                        </FontIcon>
-                    </Button>
-                    <Button x:Name="RotateButton" Style="{StaticResource ButtonStyle}" Click="RotateButton_Click">
-                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE14A;"/>
-                    </Button>
-                </StackPanel>
-
-                <Grid Grid.Row="1" Grid.Column="3">
-
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="16"/>
-                        <RowDefinition Height="32"/>
-                        <RowDefinition Height="28"/>
-                        <RowDefinition Height="28"/>
-                        <RowDefinition Height="28"/>
-                        <RowDefinition Height="28"/>
-                        <RowDefinition Height="24"/>
-                        <RowDefinition Height="24"/>
-                        <RowDefinition Height="24"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="20"/>
-                        <ColumnDefinition Width="100"/>
-                    </Grid.ColumnDefinitions>
-
-                    <Grid x:Name="ColorSample"  Background="White" Grid.ColumnSpan="2" BorderThickness="1" BorderBrush="Black"/>
-                    <TextBox x:Name="ColorHexValue" Grid.Row="1" Grid.ColumnSpan="2" Padding="0,2,0,0" MinWidth="96" />
-
-                    <TextBlock Text="A" Grid.Row="2" Grid.Column="0"  HorizontalAlignment="Center"/>
-                    <Slider  x:Name="SliderColorA" Grid.Row="2" Grid.Column="1" Minimum="0" Maximum="255" Style="{StaticResource SliderStyle}" ValueChanged="SliderColorA_ValueChanged" />
-
-                    <TextBlock Text="R" Grid.Row="3" Grid.Column="0"  HorizontalAlignment="Center"/>
-                    <Slider x:Name="SliderColorR" Grid.Row="3" Grid.Column="1"  Minimum="0" Maximum="255"  Style="{StaticResource SliderStyle}" ValueChanged="SliderColorR_ValueChanged" />
-
-                    <TextBlock Text="G" Grid.Row="4" Grid.Column="0"  HorizontalAlignment="Center"/>
-                    <Slider x:Name="SliderColorG"  Grid.Row="4" Grid.Column="1" Minimum="0" Maximum="255"  Style="{StaticResource SliderStyle}" ValueChanged="SliderColorG_ValueChanged" />
-
-                    <TextBlock Text="B" Grid.Row="5" Grid.Column="0" HorizontalAlignment="Center"/>
-                    <Slider x:Name="SliderColorB"  Grid.Row="5" Grid.Column="1" Minimum="0" Maximum="255"   Style="{StaticResource SliderStyle}" ValueChanged="SliderColorB_ValueChanged" />
-
-                    <Canvas x:Name="ColorCanvas" Grid.Row="6" Grid.RowSpan="4" Grid.ColumnSpan="2" Width="120" Height="108" VerticalAlignment="Bottom" Margin="0,0,8.25,-0.375"/>
-                </Grid>
-
-                <ScrollViewer Style="{StaticResource SymViewerStyle}">
-                    <Grid Style="{StaticResource SymGridStyle}">
-                        <canvas:CanvasControl
-            x:Name="SelectCanvas" 
-            Style="{StaticResource SelectCanvasStyle}"
-            Draw="SelectCanvas_Draw" 
-            PointerPressed="SelectCanvas_PointerPressed" />
-                    </Grid>
-                </ScrollViewer>
-
-                <Grid Grid.Column="2" >
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="30*"/>
-                        <ColumnDefinition Width="30*"/>
-                        <ColumnDefinition Width="30*"/>
-                    </Grid.ColumnDefinitions>
-
-                    <ComboBox x:Name="StartCapType"
-                      Grid.Column="0"
-                      HorizontalAlignment="Left"
-                      ItemsSource="{Binding ElementName=ctrl, Path=CapStyles}"  
-                      SelectedItem="{Binding StartCap, ElementName=ctrl, Mode=TwoWay}"
-                      SelectionChanged="StartCap_SelectionChanged" />
-
-                    <Slider x:Name="WidthSlider"
-                    Grid.Column="1"
-                    HorizontalAlignment="Center"
-                    Minimum="1"  
-                    Maximum="24"  
-                    Style="{StaticResource SliderStyle}" 
-                    ValueChanged="WidthSlider_ValueChanged"/>
-
-                    <ComboBox x:Name="EndCapType"
-                      Grid.Column="2"
-                      HorizontalAlignment="Right"
-                      ItemsSource="{Binding ElementName=ctrl, Path=CapStyles}" 
-                      SelectedItem="{Binding EndCap, ElementName=ctrl, Mode=TwoWay}"
-                      SelectionChanged="EndCap_SelectionChanged" />
-
-                </Grid>
-                <TextBlock x:Name="SymbolSize" Grid.Row="0" Grid.Column="3" Text="(0 x 0)" HorizontalAlignment="Center" />
-
-                <Grid Style="{StaticResource DrawGridStyle}">
-                    <canvas:CanvasControl
-            x:Name="DrawCanvas" 
-            Style="{StaticResource DrawCanvasStyle}"
-            Draw="DrawCanvas_Draw"
-            Loaded="DrawCanvas_Loaded" 
-            PointerMoved="DrawCanvas_PointerMoved"
-            PointerPressed="DrawCanvas_PointerPressed"
-            PointerReleased="DrawCanvas_PointerReleased" />
-                </Grid>
-
+            <Grid Style="{StaticResource DrawGridStyle}" >
+                <canvas:CanvasControl
+                        x:Name="DrawCanvas" 
+                        Style="{StaticResource DrawCanvasStyle}"
+                        Draw="DrawCanvas_Draw"
+                        Loaded="DrawCanvas_Loaded" 
+                        PointerMoved="DrawCanvas_PointerMoved"
+                        PointerPressed="DrawCanvas_PointerPressed"
+                        PointerReleased="DrawCanvas_PointerReleased" />
             </Grid>
         </Grid>
     </Grid>
-
-
 </Page>
